<resources>
    <string name="app_name">Itemist</string>
    <string name="add_note_button">Nowa notatka</string>
    <string name="choose_note_button">Wybierz notatkę</string>
    <string name="enter_name_of_note">Wpisz nazwę</string>
    <string name="finsh_button">Zakończ</string>
    <string name="note_added">Notatka dodana</string>
    <string name="add_name_of_note_button">Nadaj nazwę</string>
    <string name="error_no_name">Podaj nazwę!</string>
    <string name="ok">OK</string>
    <string name="enter_content_of_subpoint">Podaj podpunkt listy</string>
    <string name="subpoint_added">Podpunkt dodano!</string>
    <string name="you_sure_you_want_to_exit">Na pewno nie chcesz dokończyć notatki?</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="counter_value">Ilość podpunktów:\n</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="do_nothing">Nic nie rób</string>
    <string name="do_you_want_to_do_smth_with_this_note">Czy chcesz coś zrobić z tą notatką?\n</string>
    <string name="do_you_want_to_do_smth_with_this_subpoint">Czy chcesz coś zrobić z tym podpunktem?\n</string>
    <string name="deleted">Usunięto</string>
    <string name="edited">Edytowano</string>
    <string name="you_have_chosen">Wybrałeś:\n</string>
    <string name="are_you_sure">Jesteś pewien?</string>
    <string name="correct">Popraw:</string>
    <string name="confirm">Zatwierdź</string>
    <string name="cancel">Cofnij</string>
    <string name="field_cant_be_empty">Pole nie może być puste</string>
    <string name="you_have_no_notes">Nie masz żadnych notatek!</string>
    <string name="you_cant_have_more_notes">Nie możesz mieć więcej niż 50 notatek!</string>
    <string name="you_cant_have_more_subpoints">Nie możesz mieć więcej niż 50 podpunktów!</string>
    <string name="there_is_note_with_that_name">Już masz notatkę z taką nazwą!</string>
    <string name="add_subpoint">Dodaj podpunkt:</string>
    <string name="plus_button">Przycisk dodawania</string>
    <string name="arrangement_updated">Ustawienie zaktualizowane</string>
    <string name="refresh_button">Przycisk odświeżania</string>
    <string name="change_button">Przycisk zmiany</string>
    <string name="do_you_want_to_exit">Czy chcesz wyjść?</string>
    <string name="settings_button">Przycisk opcji</string>
    <string name="add_sub_button">Dodaj podpunkt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="font_size">Wielkość czcionki</string>
    <string name="overflow_icon">Przyciski wiecej</string>
    <string name="about_app">O aplikacji</string>
    <string name="settings">Opcje</string>
    <string name="current_version">Obecna wersja:</string>
    <string name="in_case_of_error_send_mail">W razie jakichkolwiek problemów proszę o wiadomość na email:</string>
    <string name="author">Autor: Jakub Mosakowski</string>
    <string name="github">http://github.com/JakubMosakowski</string>


</resources>
